[gd_scene load_steps=8 format=3 uid="uid://cybqp2djw2xu7"]

[ext_resource type="ArrayMesh" uid="uid://d0d3cchtomsg1" path="res://Assets/Effects/smoke-particle.obj" id="1_oy813"]
[ext_resource type="Script" path="res://Character/chara.gd" id="1_vbbxu"]
[ext_resource type="Script" path="res://Character/StateMachine/StateMachine.gd" id="2_hcviy"]

[sub_resource type="BoxShape3D" id="BoxShape3D_2s6ek"]
size = Vector3(0.508796, 1.76588, 0.510057)

[sub_resource type="BoxShape3D" id="BoxShape3D_8k1nb"]
size = Vector3(1.48056, 0.973576, 0.830714)

[sub_resource type="Curve" id="Curve_vc6th"]
min_value = -200.0
max_value = 200.0
_data = [Vector2(0, 10.9091), 0.0, -27.4969, 0, 0, Vector2(1, -32.7273), 253.17, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_du2rr"]
_data = [Vector2(0.00815217, 0.0090909), 0.0, 4.84514, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[node name="Character" type="CharacterBody3D"]
collision_layer = 0
collision_mask = 32
script = ExtResource("1_vbbxu")

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("2_hcviy")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.880988, 0)
shape = SubResource("BoxShape3D_2s6ek")

[node name="VaultRayLeft" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.1, 0)
target_position = Vector3(0.8, 0, 0)
collision_mask = 16
collide_with_areas = true
collide_with_bodies = false

[node name="VaultRayRight" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.1, 0)
target_position = Vector3(-0.8, 0, 0)
collision_mask = 16
collide_with_areas = true
collide_with_bodies = false

[node name="FaceAnimations" type="Node" parent="."]

[node name="rotating" type="Node3D" parent="."]

[node name="CamTarget" type="Node3D" parent="rotating"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.000329733, 1.34725, 0.644048)

[node name="Punch" type="Area3D" parent="rotating"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.384842, 0, 0.944636)
collision_layer = 0
collision_mask = 8
monitoring = false
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="rotating/Punch"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.353114, 1.13362, -0.446941)
shape = SubResource("BoxShape3D_8k1nb")

[node name="particles-jump" type="CPUParticles3D" parent="rotating"]
transform = Transform3D(0.304476, 0, 0, 0, 0.304476, 0, 0, 0, 0.304476, 0, 0, 0)
emitting = false
amount = 12
lifetime = 2.0
one_shot = true
speed_scale = 2.0
explosiveness = 1.0
randomness = 0.5
lifetime_randomness = 0.5
fract_delta = false
mesh = ExtResource("1_oy813")
emission_shape = 1
emission_sphere_radius = 1.0
direction = Vector3(0, 0, -1)
spread = 0.0
flatness = 1.0
gravity = Vector3(0, 1, 0)
initial_velocity_min = 2.0
initial_velocity_max = 5.0
linear_accel_max = 1.0
linear_accel_curve = SubResource("Curve_vc6th")
radial_accel_max = 2.0
damping_max = 5.0
scale_amount_max = 5.0
scale_amount_curve = SubResource("Curve_du2rr")

[node name="particles-falling" type="CPUParticles3D" parent="rotating"]
transform = Transform3D(0.304476, 0, 0, 0, 0.304476, 0, 0, 0, 0.304476, 0, 0, 0)
emitting = false
amount = 12
lifetime = 2.0
one_shot = true
speed_scale = 2.0
explosiveness = 1.0
randomness = 0.5
lifetime_randomness = 0.5
fract_delta = false
mesh = ExtResource("1_oy813")
emission_shape = 1
emission_sphere_radius = 1.0
direction = Vector3(0, 0, -1)
spread = 0.0
flatness = 1.0
gravity = Vector3(0, 1, 0)
initial_velocity_min = 2.0
initial_velocity_max = 5.0
linear_accel_max = 1.0
linear_accel_curve = SubResource("Curve_vc6th")
radial_accel_max = 2.0
damping_max = 5.0
scale_amount_max = 5.0
scale_amount_curve = SubResource("Curve_du2rr")

[node name="particles-punch" type="CPUParticles3D" parent="rotating"]
transform = Transform3D(0.304476, 0, 0, 0, -1.33091e-08, -0.304476, 0, 0.304476, -1.33091e-08, 0, 0.992245, 0.453684)
emitting = false
amount = 12
lifetime = 2.0
one_shot = true
speed_scale = 2.0
explosiveness = 1.0
randomness = 0.5
lifetime_randomness = 0.5
fract_delta = false
mesh = ExtResource("1_oy813")
emission_shape = 1
emission_sphere_radius = 1.0
direction = Vector3(0, 0, -1)
spread = 0.0
flatness = 1.0
gravity = Vector3(0, 1, 0)
initial_velocity_min = 2.0
initial_velocity_max = 5.0
linear_accel_max = 1.0
linear_accel_curve = SubResource("Curve_vc6th")
radial_accel_max = 2.0
damping_max = 5.0
scale_amount_max = 5.0
scale_amount_curve = SubResource("Curve_du2rr")

[node name="particles-run" type="CPUParticles3D" parent="rotating"]
transform = Transform3D(0.304476, 0, 0, 0, 0.304476, 0, 0, 0, 0.304476, 0, 0, 0)
emitting = false
amount = 12
lifetime = 2.0
preprocess = 1.0
speed_scale = 2.0
randomness = 0.5
lifetime_randomness = 0.5
mesh = ExtResource("1_oy813")
direction = Vector3(20, 20, -90)
spread = 0.0
gravity = Vector3(0, 0.5, 0)
initial_velocity_min = 1.0
initial_velocity_max = 3.0
angular_velocity_max = 330.0
linear_accel_max = 1.0
linear_accel_curve = SubResource("Curve_vc6th")
damping_max = 10.94
scale_amount_max = 5.0
scale_amount_curve = SubResource("Curve_du2rr")
